--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>com.devopsusach2020</groupId>
 	<artifactId>DevOpsUsach2020</artifactId>
 	<version>0.0.1</version>
-	<name>ApiRestCovid19_test</name>
+	<name>ApiRestCovid19_test_1</name>
 	<description>Proyecto de ejemplo para el desarrollo del diplomado DevOps Universidad de Santiago de Chile 2020</description>
 
 	<properties>
